// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface > exports of "." are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "AVAILABLE_ACTIONS",
  "ActionResult",
  "ActionStep",
  "AdminListingOptions",
  "Agent",
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticUIMessage",
  "AgentsResponse",
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "ApiResponse",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "AttachmentUploadResult",
  "AuthContext",
  "AuthMode",
  "BBApiError",
  "BBErrorKind",
  "BBHost",
  "BBHosts",
  "Bot",
  "BotDetail",
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "CapabilitiesResponse",
  "Capability",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "DEFAULTS",
  "DEFAULT_HOSTS",
  "GetMessageListOptions",
  "INTEGRATIONS_API_PREFIX",
  "INTEGRATIONS_BASE_URL",
  "IdentityAdapter",
  "IntrospectResponse",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "LoginOptions",
  "LoginResult",
  "MarkdownOptions",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "NoteResult",
  "OAUTH_BACKEND_URL",
  "OAuthTokens",
  "ParsedResponse",
  "Profile",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "Settings",
  "StorageAdapter",
  "SuspendContext",
  "SuspendResult",
  "TOKEN_ENDPOINT",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "TextDeltaFrame",
  "Theme",
  "ThemeMode",
  "ThemePref",
  "ThemeToggle",
  "ThemeToggleProps",
  "TokenResult",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "agenticHeaders",
  "applyTheme",
  "authHeaders",
  "autoApproveResolver",
  "beginBrowserLogin",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "captureError",
  "collectTextFromStream",
  "completeBrowserLogin",
  "computeExpiration",
  "configureLogo",
  "createConversation",
  "createLock",
  "createMessageStream",
  "createNote",
  "createRefreshGuard",
  "cycleTheme",
  "decodeJwtPayload",
  "decodePKCEState",
  "deleteConversation",
  "denyAllResolver",
  "discoverFrontendUrls",
  "encodePKCEState",
  "exchangeCode",
  "extractCode",
  "extractJson",
  "extractOrgIdFromClaims",
  "extractOrgIdFromIntrospect",
  "extractProfile",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "flushAnalytics",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "getAnalyticsAdapter",
  "getAuthContext",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "hasUsableAuth",
  "identifyUser",
  "inferAuthMode",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isBBApiError",
  "isTextDeltaFrame",
  "isTokenExpired",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "listTenants",
  "login",
  "markdownToHtml",
  "normalizeUrl",
  "parseAgenticStream",
  "parseResponse",
  "parseSseDataLine",
  "refreshTokens",
  "renderMarkdown",
  "renderMarkdownInto",
  "repairUnescapedQuotes",
  "resetAnalyticsAdapter",
  "runActions",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setAnalyticsAdapter",
  "setAnalyticsGroup",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "subFromAccessToken",
  "themeIcon",
  "timeAgo",
  "trackApiError",
  "trackEvent",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "useTheme",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./actions" are stable 1`] = `
[
  "AVAILABLE_ACTIONS",
  "ActionResult",
  "ActionStep",
  "runActions",
]
`;

exports[`public API surface > exports of "./adapters" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "IdentityAdapter",
  "StorageAdapter",
]
`;

exports[`public API surface > exports of "./agentic" are stable 1`] = `
[
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticUIMessage",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "SuspendContext",
  "SuspendResult",
  "TextDeltaFrame",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "agenticHeaders",
  "autoApproveResolver",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "collectTextFromStream",
  "denyAllResolver",
  "isTextDeltaFrame",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "parseAgenticStream",
  "parseSseDataLine",
]
`;

exports[`public API surface > exports of "./analytics" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "captureError",
  "flushAnalytics",
  "getAnalyticsAdapter",
  "identifyUser",
  "resetAnalyticsAdapter",
  "setAnalyticsAdapter",
  "setAnalyticsGroup",
  "trackApiError",
  "trackEvent",
]
`;

exports[`public API surface > exports of "./analytics/mixpanel" are stable 1`] = `
[
  "MixpanelAdapterConfig",
  "MixpanelClient",
  "MixpanelSuperProps",
  "createMixpanelAdapter",
]
`;

exports[`public API surface > exports of "./api" are stable 1`] = `
[
  "AdminListingOptions",
  "Agent",
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticUIMessage",
  "AgentsResponse",
  "ApiResponse",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "AttachmentUploadResult",
  "BBApiError",
  "BBErrorKind",
  "Bot",
  "BotDetail",
  "CapabilitiesResponse",
  "Capability",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "GetMessageListOptions",
  "IntrospectResponse",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "NoteResult",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "SuspendContext",
  "SuspendResult",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "TextDeltaFrame",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "agenticHeaders",
  "authHeaders",
  "autoApproveResolver",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "collectTextFromStream",
  "createConversation",
  "createMessageStream",
  "createNote",
  "deleteConversation",
  "denyAllResolver",
  "discoverFrontendUrls",
  "extractOrgIdFromIntrospect",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isBBApiError",
  "isTextDeltaFrame",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "listTenants",
  "normalizeUrl",
  "parseAgenticStream",
  "parseSseDataLine",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./auth" are stable 1`] = `
[
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "LoginOptions",
  "LoginResult",
  "Profile",
  "TokenResult",
  "beginBrowserLogin",
  "completeBrowserLogin",
  "computeExpiration",
  "createRefreshGuard",
  "decodeJwtPayload",
  "decodePKCEState",
  "encodePKCEState",
  "exchangeCode",
  "extractOrgIdFromClaims",
  "extractProfile",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "isTokenExpired",
  "login",
  "refreshTokens",
]
`;

exports[`public API surface > exports of "./config" are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "BBHost",
  "BBHosts",
  "DEFAULT_HOSTS",
  "INTEGRATIONS_API_PREFIX",
  "INTEGRATIONS_BASE_URL",
  "OAUTH_BACKEND_URL",
  "TOKEN_ENDPOINT",
]
`;

exports[`public API surface > exports of "./prompt" are stable 1`] = `
[
  "ParsedResponse",
  "parseResponse",
]
`;

exports[`public API surface > exports of "./react" are stable 1`] = `
[
  "BBClientProvider",
  "BBClientProviderProps",
  "BBKeys",
  "CreateBBQueryClientOptions",
  "UseChatStreamArgs",
  "UseChatStreamResult",
  "agentsQueryOptions",
  "bbKeys",
  "bbShouldRetryQuery",
  "botDetailQueryOptions",
  "botsQueryOptions",
  "capabilitiesQueryOptions",
  "conversationDetailQueryOptions",
  "createBBQueryClient",
  "messagesInfiniteOptions",
  "tenantConfigQueryOptions",
  "useAgents",
  "useBBContext",
  "useBotDetail",
  "useBots",
  "useCapabilities",
  "useChatStream",
  "useConversationAttachments",
  "useConversationDetail",
  "useConversationWebSearch",
  "useCreateConversation",
  "useCreateNote",
  "useDeleteConversation",
  "useMessages",
  "useSetAgentActive",
  "useSetAgentAvailability",
  "useSetCapabilityActive",
  "useSetCapabilityAvailability",
  "useSetCustomAgentsEnabled",
  "useTenantConfig",
  "useUpdateConversation",
  "useWebSearchProviders",
]
`;

exports[`public API surface > exports of "./settings" are stable 1`] = `
[
  "AuthContext",
  "AuthMode",
  "DEFAULTS",
  "OAuthTokens",
  "Settings",
  "getAuthContext",
  "hasUsableAuth",
  "inferAuthMode",
]
`;

exports[`public API surface > exports of "./telemetry" are stable 1`] = `
[
  "AGENT_KINDS",
  "AgentKind",
  "BACKEND_ACTION_TYPES",
  "BLOCKED_ACTIONS",
  "BOT_KINDS",
  "BackendActionType",
  "BlockedAction",
  "BotKind",
  "CHAT_TOPICS",
  "CLIENT_ROUTES",
  "CONVERSATION_ENTRY_POINTS",
  "CORE_EVENT_NAMES",
  "ChatTopic",
  "ConsentGate",
  "ConsentSource",
  "ConsentState",
  "ConversationEntryPoint",
  "CoreEventMap",
  "CoreEventName",
  "CoreEventProps",
  "DENIED_PROPERTY_KEYS",
  "EMITTERS",
  "ERROR_SCOPES",
  "Emitter",
  "ErrorScope",
  "INPUT_MODES",
  "InputMode",
  "LEGACY_EVENT_RENAMES",
  "LEGACY_RENAME_TARGETS",
  "MESSAGE_FAILED_STAGES",
  "MIN_EVENT_SET",
  "MessageFailedStage",
  "OUTCOMES",
  "OWNER_PERMISSIONS",
  "Outcome",
  "OwnerPermission",
  "PROMPT_SOURCES",
  "PeopleProperties",
  "PromptSource",
  "RETIRED_EVENT_NAMES",
  "Route",
  "SIGN_IN_METHODS",
  "SIGN_IN_STAGES",
  "SIGN_OUT_CAUSES",
  "STREAM_DROP_REASONS",
  "SURFACES",
  "SignInMethod",
  "SignInStage",
  "SignOutCause",
  "SplitRename",
  "StreamDropReason",
  "SuperProperties",
  "Surface",
  "TAXONOMY_VERSION",
  "TELEMETRY_ENVS",
  "TOOL_KINDS",
  "TOPIC_TAXONOMY_VERSION",
  "TelemetryEnv",
  "ToolKind",
  "VOCABULARY_FINGERPRINT",
  "coerceChatTopic",
  "createConsentGate",
  "createStaticConsentSource",
  "createTogglableConsentSource",
  "stripDeniedProperties",
]
`;

exports[`public API surface > exports of "./telemetry/cookiebot" are stable 1`] = `
[
  "COOKIEBOT_EVENTS",
  "ConsentEventTarget",
  "CookiebotConsent",
  "CookiebotLike",
  "CookiebotSourceOptions",
  "createCookiebotConsentSource",
]
`;

exports[`public API surface > exports of "./ui" are stable 1`] = `
[
  "MarkdownOptions",
  "Theme",
  "ThemeMode",
  "ThemePref",
  "ThemeToggle",
  "ThemeToggleProps",
  "applyTheme",
  "configureLogo",
  "cycleTheme",
  "markdownToHtml",
  "renderMarkdown",
  "renderMarkdownInto",
  "themeIcon",
  "timeAgo",
  "useTheme",
]
`;

exports[`public API surface > exports of "./utils" are stable 1`] = `
[
  "createLock",
  "extractCode",
  "extractJson",
  "repairUnescapedQuotes",
  "subFromAccessToken",
]
`;
